--- a/materials/02-working-local.qmd
+++ b/materials/02-working-local.qmd
@@ -49,7 +49,7 @@ $ ls -a                      # List directories and files, including hidden
 
 Note that if you are ever unsure of which working directory you are in, it should be visible as part of the command prompt. If not visible, you can request it via the `pwd` bash command. 
 
-![The command line, and current working directory.](../figures/bash-commands.png){width=70% fig-align="left"}
+![The command line, and current working directory.](../materials/images/bash-commands.png){width=70% fig-align="left"}
 
 One final note on command lines. For Windows computers, to paste any line into the open terminal, <kbd>Ctrl</kbd> + <kbd>v</kbd> sadly won't work. Instead, you use <kbd>Shift</kbd> + <kbd>Insert</kbd>. For OSX, <kbd>Command</kbd> + <kbd>v</kbd> should still work. 
 :::
@@ -62,7 +62,7 @@ It is often useful to keep a File Explorer instance open while you are first lea
 If you get lost, you can also use File Explorer to open a Git bash terminal directly in the folder we wish to work in. Simply navigate to the parent folder, right click on the folder you wish to work in, and click `Open Git Bash here`.
 :::
 
-![New folder in the user/username directory.](../figures/mkdir-planets2.png){width=60% fig-align="left"}
+![New folder in the user/username directory.](../materials/images/mkdir-planets2.png){width=60% fig-align="left"}
 
 Then we tell Git to make `planets` a [repository](https://swcarpentry.github.io/git-novice/reference.html#repository) -- a place where Git can store versions of our files:
 
@@ -90,7 +90,7 @@ We get the following output:
 .   ..  .git
 ```
 
-![We can see the hidden folder in Folder Explorer as well.](../figures/git-init-planets.png){width=70% fig-align="left"}
+![We can see the hidden folder in Folder Explorer as well.](../materials/images/git-init-planets.png){width=70% fig-align="left"}
 
 Git uses this special subdirectory to store all the information about the project, including the tracked files and sub-directories located within the project's directory. If we ever delete the `.git`subdirectory, we will lose the project's history.
 
@@ -128,7 +128,7 @@ $ cd c:/users/bashcrof/planets
 
 Note that you can also tell you are in a Git repository, and not a regular directory, from the Git Bash command prompt. The very last part of the prompt (before the $) should contain, in brackets, the name of the `branch` we are on. Don't worry about branches right now, but having `main` present in the command prompt tells us we are in a Git repository!
 
-![Repository vs Directory.](../figures/check-in-repo-ba.png){width=70% fig-align="left"}
+![Repository vs Directory.](../materials/images/check-in-repo-ba.png){width=70% fig-align="left"}
 
 Let's create a file called `mars.txt` that contains some notes about the Red Planet's suitability as a base. Open a new document named `mars.txt` using a plain text editor such as Notepad++. Add the following line to `mars.txt` and save the file.
 
@@ -346,4 +346,4 @@ To allow for this, Git has a special *staging area* where it keeps track of th
 
 If you think of Git as taking snapshots of changes over the life of a project, `git add` specifies what will go in a snapshot (putting things in the staging area), and `git commit` then actually takes the snapshot, and makes a permanent record of it (as a commit). If you don't have anything staged when you type git commit, Git will prompt you to use git commit -a or git commit --all, which is kind of like gathering everyone to take a group photo! However, it's almost always better to explicitly add things to the staging area, because you might commit changes you forgot you made. (Going back to the group photo simile, you might get an extra with incomplete makeup walking on the stage for the picture because you used -a!) Try to stage things manually, or you might find yourself searching for "git undo commit" more than you would like!
 
-![The Git Staging Area](../figures/tracking-changes.png)
+![The Git Staging Area](../materials/images/tracking-changes.png)
