more tidy figures folder

--- a/materials/03-remote-hosting.qmd
+++ b/materials/03-remote-hosting.qmd
@@ -10,7 +10,7 @@ format:
 knitr::opts_chunk$set(eval = FALSE)
 ```
 
-![Collaboration](../figures/git-gh-collab.png){fig-align="left" width="80%"}
+![Collaboration](../materials/images/git-gh-collab2.png){fig-align="left" width="80%"}
 
 Version control really comes into its own when we begin to collaborate with other people. We already have most of the machinery we need to do this; the only thing missing is to copy changes from one repository to another.
 
